--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
     background: #313131
 }
 
+canvas {
+    box-shadow: -3px 2px 9px 6px black;
+    cursor: pointer;
+}
+
 .tools {
     display:flex;
     justify-content:center;
